This document describes the high-level changes made to the civet software from
release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository


Version 1.9.4
--------------
Bug Fixes
 - Fix bug in civet_manged_batch_master where it wouldn't always restart itself
   if it got close to its walltime limit.
Features
 - add --no-email option to civet_run
 - Add prefix to submitted job names (Defaults to "CIVET__", can be changed with
   civet_run --job-prefix option)
 - add display_name attribute for filelist


Version 1.9.3.2
---------------
Features
 - revert requirement for version commands to have a zero exit status
 - fix bug where civet_status was contacting torque more often than it needs to


Version 1.9.3.1
---------------
Bug Fixes
 - Fix bug with initializing tool modulefiles (introduced 1.9.3)


Version 1.9.3
-------------
Bug Fixes
 - Fix bug warning user of duplicate option override if it appears in the
   pipeline option file and a user option file
 - Fix potential civet_status race condition where it could try to read a
   status.txt file before it is finished being written. Race condition could
   also cause the civet_managed_batch_master process to terminate.

Features
 - Use full path to python for validation and consolidate log scripts,
   path is set in config file. If not set, default to python in path. This
   allows a tool to load a Python modulefile that is not compatible with
   these scripts.


Version 1.9.2
-------------
Bug Fixes
 - Fix bug processing return code of tool's version command (introduced 1.9.1)
 - Fix Python Traceback if tool XML contains multiple file tags with the same
   file id

Features
 - added optional "display_name" attribute for <file>, <filelist>, <dir>,
   <string> tags.  This is not currently used by the civet framework, but can
   be used by other tools. For example, a UI may use this attribute to label